--- a/Client/WPFWCFClient/WPFClientControlLib/WPFClientControlLib.csproj
+++ b/Client/WPFWCFClient/WPFClientControlLib/WPFClientControlLib.csproj
@@ -68,6 +68,9 @@
     <Compile Include="DbAchorListBox.xaml.cs">
       <DependentUpon>DbAchorListBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ProgressBarEx.xaml.cs">
+      <DependentUpon>ProgressBarEx.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TAchorListBox.xaml.cs">
       <DependentUpon>TAchorListBox.xaml</DependentUpon>
     </Compile>
@@ -117,6 +120,10 @@
     <Page Include="DbAchorListBox.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ProgressBarEx.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="TAchorListBox.xaml">
       <SubType>Designer</SubType>
