--- a/DAL/DAL/DAL.csproj
+++ b/DAL/DAL/DAL.csproj
@@ -40,6 +40,10 @@
       <HintPath>..\..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SQLite.CodeFirst, Version=1.5.1.25, Culture=neutral, PublicKeyToken=eb96ba0a78d831a7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.CodeFirst.1.5.1.25\lib\net45\SQLite.CodeFirst.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -65,6 +69,7 @@
   <ItemGroup>
     <Compile Include="EngineDb.cs" />
     <Compile Include="LocationDb.cs" />
+    <Compile Include="LocationDbLite.cs" />
     <Compile Include="LocationHistoryDb.cs" />
     <Compile Include="Migrations\201809260634336_InitialCreate.cs" />
     <Compile Include="Migrations\201809260634336_InitialCreate.Designer.cs">
