--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -8,12 +8,22 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <appSettings>
+    <add key="DataInitMode" value="0" /> <!--数据初始化方式 1:不初始化,0:EF,1:Sql-->
+    <add key="DbSource" value="1" /><!--数据库来源 0:SqlServer 1:Sqlite-->
+    <!--<add key="LocationDbName" value="LocationConnection"/>
+    <add key="LocationHisDbName" value="LocationHistoryConnection"/>-->
+    <!--<add key="LocationDbName" value="LocationLite"/>
+    <add key="LocationHisDbName" value="LocationHisLite"/>-->
+  </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="LocationConnection" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
     <add name="LocationHistoryConnection" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
     <add name="topviewxpConnection" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="Sqlite" connectionString="Data Source=engine.db" providerName="System.Data.SQLite.EF6" />
+    <add name="EngineLite" connectionString="Data Source=engine.db" providerName="System.Data.SQLite.EF6" />
+    <add name="LocationLite" connectionString="Data Source=location.db" providerName="System.Data.SQLite.EF6" />
+    <add name="LocationHisLite" connectionString="Data Source=locationHis.db" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
