--- a/Server/WCFServer/LocationWCF/packages.config
+++ b/Server/WCFServer/LocationWCF/packages.config
@@ -24,6 +24,7 @@
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="SQLite.CodeFirst" version="1.5.1.25" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net45" />
