Sqlite数据初始化

--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -9,8 +9,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="DataInitMode" value="0" /> <!--数据初始化方式 1:不初始化,0:EF,1:Sql-->
-    <add key="DbSource" value="1" /><!--数据库来源 0:SqlServer 1:Sqlite-->
+    <add key="DataInitMode" value="-1" /> <!--数据初始化方式 -1:不初始化,0:EF,1:Sql-->
+    <add key="DbSource" value="0" /><!--数据库来源 0:SqlServer 1:Sqlite-->
+    <add key="ShowSqlLog" value="1" /><!--显示数据库语句 0:SqlServer 1:Sqlite-->
     <!--<add key="LocationDbName" value="LocationConnection"/>
     <add key="LocationHisDbName" value="LocationHistoryConnection"/>-->
     <!--<add key="LocationDbName" value="LocationLite"/>
