--- a/Model/DbModel/DbModel.csproj
+++ b/Model/DbModel/DbModel.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Tools\ListExtension.cs" />
     <Compile Include="Tools\Log.cs" />
     <Compile Include="Tools\MathTool.cs" />
+    <Compile Include="Tools\ThreadTool.cs" />
     <Compile Include="Tools\TreeHelper.cs" />
     <Compile Include="Tools\XmlSerializeHelper.cs" />
   </ItemGroup>
