--- a/BLL/BLL/BLL.csproj
+++ b/BLL/BLL/BLL.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseBuffer.cs" />
     <Compile Include="Bll.cs" />
     <Compile Include="Blls\BaseBll.cs" />
     <Compile Include="Blls\Engine\bus_archorBll.cs" />
@@ -121,6 +122,7 @@
     <Compile Include="Bll_InsertPos.cs" />
     <Compile Include="ServiceHelpers\PhysicalTopologySP.cs" />
     <Compile Include="ServiceHelpers\U3DPositionSP.cs" />
+    <Compile Include="TagRelationBuffer.cs" />
     <Compile Include="TestBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\DevInfoHelper.cs" />
